# Concepts directory CMakeLists.txt

# Add concept subdirectories as you create them
add_subdirectory(basics)

# Future concepts - uncomment as you add them:
# add_subdirectory(polymorphism)
# add_subdirectory(inheritance)
# add_subdirectory(templates)
# add_subdirectory(smart_pointers)
# add_subdirectory(stl_containers)